--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,3 +15,10 @@ html {
 	flex-direction: column;
 	justify-content: space-between;
 }
+
+.link {
+	color: currentColor;
+	&:hover {
+		text-decoration-line: underline;
+	}
+}
